# cpp_ws

cpp_pkg/: CMakeLists.txt  package.xml
cpp_pkg/launch/: launch_project.launch.py  launch_project_simulation.launch.py  wheeled_model_simulation.launch.py
cpp_pkg/models/ground_plane/: model.config  model.sdf
cpp_pkg/models/meshes/: wheel.dae  wheel_red.mtl  wheels.stl
cpp_pkg/models/mobile_camera/: model.config  model.sdf
cpp_pkg/models/wheeled_model/: model.sdf
cpp_pkg/scripts/: speed_sub.py  turn_camera_service_client.py
cpp_pkg/src/: action_client.cpp  action_server.cpp  publisher.cpp  rpm_pub.cpp  service_client.cpp  service_server.cpp  speed_calc.cpp  subscriber.cpp  tf_broadcaster.cpp  tf_listener.cpp  turn_camera_service_client.cpp  turn_camera_service_server.cpp
cpp_pkg/worlds/: project_world.sdf  test_world.sdf  wheeled_mobile_world.sdf
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/action/: Navigate.action
custom_interfaces/srv/: OddEvenCheck.srv
log/: latest_list
